--- a/ZombieSmash/Assembly-CSharp.csproj
+++ b/ZombieSmash/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\colis.cs" />
+     <Compile Include="Assets\createObject.cs" />
      <Compile Include="Assets\effects.cs" />
      <Compile Include="Assets\Game Jam Template\Scripts\FlexibleUI\FlexibleUI.cs" />
      <Compile Include="Assets\Game Jam Template\Scripts\FlexibleUI\FlexibleUIButton.cs" />
