--- a/ZombieSmash/Assembly-CSharp.csproj
+++ b/ZombieSmash/Assembly-CSharp.csproj
@@ -75,9 +75,11 @@
      <Compile Include="Assets\moveCamera.cs" />
      <Compile Include="Assets\moveOrb.cs" />
      <Compile Include="Assets\restart.cs" />
+     <Compile Include="Assets\score.cs" />
      <Compile Include="Assets\stats.cs" />
      <Compile Include="Assets\ZombieLeft.cs" />
      <Compile Include="Assets\zombieRight.cs" />
+     <Compile Include="Assets\zScores.cs" />
      <None Include="Assets\Game Jam Template\Fonts\OpenSans\License!.txt" />
      <None Include="Assets\Game Jam Template\GameJamTemplateReadMe.txt" />
      <None Include="Assets\Game Jam Template\README.txt" />
