--- a/ZombieSmash/Assembly-CSharp.csproj
+++ b/ZombieSmash/Assembly-CSharp.csproj
@@ -74,9 +74,11 @@
      <Compile Include="Assets\mainMenu.cs" />
      <Compile Include="Assets\moveCamera.cs" />
      <Compile Include="Assets\moveOrb.cs" />
+     <Compile Include="Assets\pause.cs" />
      <Compile Include="Assets\restart.cs" />
      <Compile Include="Assets\score.cs" />
      <Compile Include="Assets\stats.cs" />
+     <Compile Include="Assets\TimeElapsedDisp.cs" />
      <Compile Include="Assets\ZombieLeft.cs" />
      <Compile Include="Assets\zombieRight.cs" />
      <Compile Include="Assets\zScores.cs" />
