mute option. all of functionality schedule is complete. we just need to make zomb move and work on optimization

--- a/ZombieSmash/Assembly-CSharp.csproj
+++ b/ZombieSmash/Assembly-CSharp.csproj
@@ -81,6 +81,7 @@
      <Compile Include="Assets\PlayerProgress.cs" />
      <Compile Include="Assets\restart.cs" />
      <Compile Include="Assets\score.cs" />
+     <Compile Include="Assets\sounds.cs" />
      <Compile Include="Assets\stats.cs" />
      <Compile Include="Assets\TimeElapsedDisp.cs" />
      <Compile Include="Assets\ZombieLeft.cs" />
